Fix rendering convos images on small screen, closes #450

--- a/assets/sass/components/_chat-messages.scss
+++ b/assets/sass/components/_chat-messages.scss
@@ -117,7 +117,7 @@
 
 .message__embed {
   text-decoration: none;
-  margin-top: 0.8rem;
+  margin-top: 0.6rem;
 
   > a {
     display: inline-block;
